--- a/index.html
+++ b/index.html
@@ -1,35 +1,56 @@
 <!DOCTYPE html>
 <html lang="en">
-	<head>
-		<meta charset="utf-8" />
-		<link rel="icon" href="/bells-sheets-pager/favicon.png" />
-		<meta name="viewport" content="width=device-width" />
-		<meta http-equiv="content-security-policy" content="">
-		<link href="/bells-sheets-pager/internal/immutable/assets/_page-826bbaa0.css" rel="stylesheet">
-		<link rel="modulepreload" href="/bells-sheets-pager/internal/immutable/start-d5403da6.js">
-		<link rel="modulepreload" href="/bells-sheets-pager/internal/immutable/chunks/index-1664d19c.js">
-		<link rel="modulepreload" href="/bells-sheets-pager/internal/immutable/chunks/singletons-48cce796.js">
-		<link rel="modulepreload" href="/bells-sheets-pager/internal/immutable/components/layout.svelte-e0888d8b.js">
+    <head>
+        <title>Impaginatore Spartiti</title>
+        <meta charset="utf-8" />
+        <link rel="icon" href="/bells-sheets-pager/favicon.png" />
+        <meta name="viewport" content="width=device-width" />
+        <style>
+            :root {
+                --bg-color: #353535;
+                --primary-color: #b8a61a;
+                --shadow-color: #e2cb1d44;
+                --shadow-color-hover: #e2cb1d88;
+                --text-color: #f0f0f0;
+                --font: "Roboto";
+                color: var(--text-color);
+                font-family: var(--font);
+            }
+        </style>
+        <meta http-equiv="content-security-policy" content="">
+		<link href="/bells-sheets-pager/internal/immutable/assets/_page-613182c9.css" rel="stylesheet">
+		<link rel="modulepreload" href="/bells-sheets-pager/internal/immutable/start-c6f3a4c8.js">
+		<link rel="modulepreload" href="/bells-sheets-pager/internal/immutable/chunks/index-cdb4327e.js">
+		<link rel="modulepreload" href="/bells-sheets-pager/internal/immutable/chunks/singletons-0dad6b15.js">
+		<link rel="modulepreload" href="/bells-sheets-pager/internal/immutable/chunks/preload-helper-41c905a7.js">
+		<link rel="modulepreload" href="/bells-sheets-pager/internal/immutable/components/layout.svelte-e921b5ba.js">
 		<link rel="modulepreload" href="/bells-sheets-pager/internal/immutable/modules/pages/_layout.ts-9cbb603b.js">
 		<link rel="modulepreload" href="/bells-sheets-pager/internal/immutable/chunks/_layout-da46b06b.js">
-		<link rel="modulepreload" href="/bells-sheets-pager/internal/immutable/components/pages/_page.svelte-01216398.js">
-	</head>
-	<body data-sveltekit-preload-data="hover">
-		<div style="display: contents">
+		<link rel="modulepreload" href="/bells-sheets-pager/internal/immutable/components/pages/_page.svelte-12dff0eb.js">
+		<link rel="modulepreload" href="/bells-sheets-pager/internal/immutable/chunks/_page-633e55b6.js">
+    </head>
+    <body data-sveltekit-preload-data="hover" style="margin: 0">
+        <div style="display: contents">
 
 
-<h1 class="title svelte-5xc7kk">Bells Sheets Pager</h1>
-<h2 class="title svelte-5xc7kk">Hello World</h2>
+<div class="background svelte-1ilkyd4"><h1 class="title svelte-1ilkyd4">Impaginatore Spartiti Campane a Sistema Veronese</h1>
+    <div class="form svelte-1ilkyd4"><div class="title-form note-input svelte-1ilkyd4"><label for="title">Titolo</label>
+            <input type="text" name="title" id="input-title" value=""></div>
+        <div class="author-form note-input svelte-1ilkyd4"><label for="author">Autore/sottotitolo</label>
+            <input type="text" name="author" id="input-author" value=""></div>
+        <textarea name="raw" id="input-raw" rows="10" class="textInput svelte-1ilkyd4" placeholder="1,2,3/1,4/2,5/3/1,..."></textarea>
+        <input type="button" value="Impagina" class="cta-button svelte-1ilkyd4"></div>
+</div>
 
 
-		<script type="module" data-sveltekit-hydrate="dtohu4">
-			import { start } from "/bells-sheets-pager/internal/immutable/start-d5403da6.js";
+		<script type="module" data-sveltekit-hydrate="jhmjw">
+			import { start } from "/bells-sheets-pager/internal/immutable/start-c6f3a4c8.js";
 
 			start({
 				env: {},
 				paths: {"assets":"/bells-sheets-pager","base":"/bells-sheets-pager"},
-				target: document.querySelector('[data-sveltekit-hydrate="dtohu4"]').parentNode,
-				version: "1675204511981",
+				target: document.querySelector('[data-sveltekit-hydrate="jhmjw"]').parentNode,
+				version: "1675671503830",
 				hydrate: {
 					node_ids: [0, 2],
 					data: [null,null],
@@ -39,5 +60,5 @@
 			});
 		</script>
 	</div>
-	</body>
+    </body>
 </html>
