--- a/index.html
+++ b/index.html
@@ -18,53 +18,58 @@
             }
         </style>
         <meta http-equiv="content-security-policy" content="">
-		<link href="/bells-sheets-pager/internal/immutable/assets/_page-2cef2450.css" rel="stylesheet">
-		<link rel="modulepreload" href="/bells-sheets-pager/internal/immutable/start-aebc1ea1.js">
-		<link rel="modulepreload" href="/bells-sheets-pager/internal/immutable/chunks/index-64ad735e.js">
-		<link rel="modulepreload" href="/bells-sheets-pager/internal/immutable/chunks/singletons-134d26fe.js">
+		<link href="/bells-sheets-pager/internal/immutable/assets/_page-fe06d2a1.css" rel="stylesheet">
+		<link rel="modulepreload" href="/bells-sheets-pager/internal/immutable/start-4c39597e.js">
+		<link rel="modulepreload" href="/bells-sheets-pager/internal/immutable/chunks/index-8e73d0ff.js">
+		<link rel="modulepreload" href="/bells-sheets-pager/internal/immutable/chunks/singletons-fe47261d.js">
 		<link rel="modulepreload" href="/bells-sheets-pager/internal/immutable/chunks/shared-23917130.js">
 		<link rel="modulepreload" href="/bells-sheets-pager/internal/immutable/chunks/preload-helper-41c905a7.js">
-		<link rel="modulepreload" href="/bells-sheets-pager/internal/immutable/components/layout.svelte-f9905d81.js">
+		<link rel="modulepreload" href="/bells-sheets-pager/internal/immutable/components/layout.svelte-b54127ab.js">
 		<link rel="modulepreload" href="/bells-sheets-pager/internal/immutable/modules/pages/_layout.ts-9cbb603b.js">
 		<link rel="modulepreload" href="/bells-sheets-pager/internal/immutable/chunks/_layout-da46b06b.js">
-		<link rel="modulepreload" href="/bells-sheets-pager/internal/immutable/components/pages/_page.svelte-3c882b4a.js">
-		<link rel="modulepreload" href="/bells-sheets-pager/internal/immutable/chunks/_page-776b9608.js">
+		<link rel="modulepreload" href="/bells-sheets-pager/internal/immutable/components/pages/_page.svelte-6775af48.js">
+		<link rel="modulepreload" href="/bells-sheets-pager/internal/immutable/chunks/_page-b6cbea69.js">
     </head>
     <body data-sveltekit-preload-data="hover" style="margin: 0">
         <div style="display: contents">
 
 
-<div class="background svelte-pna1l9"><h1 class="title svelte-pna1l9">Impaginatore Spartiti Campane a Sistema Veronese</h1>
-    <div class="form svelte-pna1l9"><div class="bsp-input svelte-pna1l9"><label for="title">Titolo</label>
-            <input type="text" name="title" id="input-title" class="text-input svelte-pna1l9" value=""></div>
-        <div class="bsp-input svelte-pna1l9"><label for="author">Autore/sottotitolo</label>
-            <input type="text" name="author" id="input-author" class="text-input svelte-pna1l9" value=""></div>
-        <textarea name="raw" id="input-raw" rows="10" class="raw-textarea svelte-pna1l9" placeholder="1,2,3/1,4/2,5/3/1,..."></textarea>
-        <input type="button" value="Impagina" class="cta-button svelte-pna1l9">
-        <div class="bsp-input settings svelte-pna1l9"><button class="settings-btn svelte-m2z3w3">⚙ Impostazioni</button>
-<div class="settings-form form-hide svelte-m2z3w3"><div class="setting-input-div svelte-m2z3w3"><label for="author">Numero di colonne</label>
-        <input type="number" name="columns" id="input-columns" min="7" max="15" step="1" class="svelte-m2z3w3" value="13"></div>
-    <div class="setting-input-div svelte-m2z3w3"><label for="author">Spazio sui ritorni</label>
-        <input type="checkbox" name="returnSpacing" id="input-returnSpacing" class="svelte-m2z3w3" checked></div>
-    <div class="setting-input-div svelte-m2z3w3"><label for="author">Colori righe alternati</label>
-        <input type="checkbox" name="bicolorRows" id="input-bicolorRows" class="svelte-m2z3w3" checked></div>
-    <div class="setting-input-div svelte-m2z3w3"><label for="author">Colore ritorni</label>
-        <input type="color" name="returnColor" id="input-returnColor" class="svelte-m2z3w3" value="#ff9d9d"></div>
-    <div class="setting-input-div svelte-m2z3w3"><label for="author">Colore pause</label>
-        <input type="color" name="pauseColor" id="input-pauseColor" class="svelte-m2z3w3" value="#b5ffb5"></div>
-    <button class="settings-btn svelte-m2z3w3">⟲ Ripristina</button>
+<div class="background svelte-19wa3wn"><h1 class="title svelte-19wa3wn">Impaginatore Spartiti Campane a Sistema Veronese</h1>
+    <div class="form svelte-19wa3wn"><div class="bsp-input svelte-19wa3wn"><label for="title">Titolo</label>
+            <input type="text" name="title" id="input-title" class="text-input svelte-19wa3wn" value=""></div>
+        <div class="bsp-input svelte-19wa3wn"><label for="author">Autore/sottotitolo</label>
+            <input type="text" name="author" id="input-author" class="text-input svelte-19wa3wn" value=""></div>
+        <textarea name="raw" id="input-raw" rows="10" class="raw-textarea svelte-19wa3wn" placeholder="1,2,3/1,4/2,5/3/1,..."></textarea>
+        <input type="button" value="Impagina" class="cta-button svelte-19wa3wn">
+        <div class="bsp-input settings svelte-19wa3wn"><button class="settings-btn svelte-1cvtray">⚙ Impostazioni</button>
+<div class="settings-form svelte-1cvtray"><div class="settings-form form-hide svelte-1cvtray"><div class="setting-input-div svelte-1cvtray"><label for="input-columns">Numero di colonne</label>
+            <input type="number" name="columns" id="input-columns" min="7" max="15" step="1" class="svelte-1cvtray" value="13"></div>
+        <div class="setting-input-div svelte-1cvtray"><label for="input-returnSpacing">Spazio sui ritorni</label>
+            <input type="checkbox" name="returnSpacing" id="input-returnSpacing" class="svelte-1cvtray" checked></div>
+        <div class="setting-input-div svelte-1cvtray"><label for="input-bicolorRows">Colori righe alternati</label>
+            <input type="checkbox" name="bicolorRows" id="input-bicolorRows" class="svelte-1cvtray" checked></div>
+        <div class="setting-input-div svelte-1cvtray"><label for="input-returnColor">Colore ritorni</label>
+            <div class="color-input svelte-1cvtray"><input type="color" name="returnColor" id="input-returnColor" class="svelte-1cvtray" value="#ff9d9d">
+                <div class="color-input svelte-1cvtray"><input type="checkbox" name="returnColorTransparent" id="input-returnColorTransparent" class="svelte-1cvtray">
+                    <label for="input-returnColorTransparent">Trasparente</label></div></div></div>
+        <div class="setting-input-div svelte-1cvtray"><label for="input-pauseColor">Colore pause</label>
+            <div class="color-input svelte-1cvtray"><input type="color" name="pauseColor" id="input-pauseColor" class="svelte-1cvtray" value="#b5ffb5">
+                <div class="color-input svelte-1cvtray"><input type="checkbox" name="pauseColorTransparent" id="input-pauseColorTransparent" class="svelte-1cvtray">
+                    <label for="input-pauseColorTransparent">Trasparente</label></div></div></div>
+        <button class="settings-btn svelte-1cvtray">⟲ Ripristina</button></div>
 </div></div></div>
+    
 </div>
 
 
-		<script type="module" data-sveltekit-hydrate="17n238m">
-			import { start } from "/bells-sheets-pager/internal/immutable/start-aebc1ea1.js";
+		<script type="module" data-sveltekit-hydrate="1fyuhfn">
+			import { start } from "/bells-sheets-pager/internal/immutable/start-4c39597e.js";
 
 			start({
 				env: {},
 				paths: {"assets":"/bells-sheets-pager","base":"/bells-sheets-pager"},
-				target: document.querySelector('[data-sveltekit-hydrate="17n238m"]').parentNode,
-				version: "1675722807746",
+				target: document.querySelector('[data-sveltekit-hydrate="1fyuhfn"]').parentNode,
+				version: "1675789097927",
 				hydrate: {
 					node_ids: [0, 2],
 					data: [null,null],
