--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
             }
         </style>
         <meta http-equiv="content-security-policy" content="">
-		<link href="/bells-sheets-pager/internal/immutable/assets/_page-fe06d2a1.css" rel="stylesheet">
-		<link rel="modulepreload" href="/bells-sheets-pager/internal/immutable/start-4c39597e.js">
+		<link href="/bells-sheets-pager/internal/immutable/assets/_page-a048fa8f.css" rel="stylesheet">
+		<link rel="modulepreload" href="/bells-sheets-pager/internal/immutable/start-094f82df.js">
 		<link rel="modulepreload" href="/bells-sheets-pager/internal/immutable/chunks/index-8e73d0ff.js">
 		<link rel="modulepreload" href="/bells-sheets-pager/internal/immutable/chunks/singletons-fe47261d.js">
 		<link rel="modulepreload" href="/bells-sheets-pager/internal/immutable/chunks/shared-23917130.js">
@@ -27,8 +27,8 @@
 		<link rel="modulepreload" href="/bells-sheets-pager/internal/immutable/components/layout.svelte-b54127ab.js">
 		<link rel="modulepreload" href="/bells-sheets-pager/internal/immutable/modules/pages/_layout.ts-9cbb603b.js">
 		<link rel="modulepreload" href="/bells-sheets-pager/internal/immutable/chunks/_layout-da46b06b.js">
-		<link rel="modulepreload" href="/bells-sheets-pager/internal/immutable/components/pages/_page.svelte-6775af48.js">
-		<link rel="modulepreload" href="/bells-sheets-pager/internal/immutable/chunks/_page-b6cbea69.js">
+		<link rel="modulepreload" href="/bells-sheets-pager/internal/immutable/components/pages/_page.svelte-d558f517.js">
+		<link rel="modulepreload" href="/bells-sheets-pager/internal/immutable/chunks/_page-fe3bd7d2.js">
     </head>
     <body data-sveltekit-preload-data="hover" style="margin: 0">
         <div style="display: contents">
@@ -41,35 +41,37 @@
             <input type="text" name="author" id="input-author" class="text-input svelte-19wa3wn" value=""></div>
         <textarea name="raw" id="input-raw" rows="10" class="raw-textarea svelte-19wa3wn" placeholder="1,2,3/1,4/2,5/3/1,..."></textarea>
         <input type="button" value="Impagina" class="cta-button svelte-19wa3wn">
-        <div class="bsp-input settings svelte-19wa3wn"><button class="settings-btn svelte-1cvtray">⚙ Impostazioni</button>
-<div class="settings-form svelte-1cvtray"><div class="settings-form form-hide svelte-1cvtray"><div class="setting-input-div svelte-1cvtray"><label for="input-columns">Numero di colonne</label>
-            <input type="number" name="columns" id="input-columns" min="7" max="15" step="1" class="svelte-1cvtray" value="13"></div>
-        <div class="setting-input-div svelte-1cvtray"><label for="input-returnSpacing">Spazio sui ritorni</label>
-            <input type="checkbox" name="returnSpacing" id="input-returnSpacing" class="svelte-1cvtray" checked></div>
-        <div class="setting-input-div svelte-1cvtray"><label for="input-bicolorRows">Colori righe alternati</label>
-            <input type="checkbox" name="bicolorRows" id="input-bicolorRows" class="svelte-1cvtray" checked></div>
-        <div class="setting-input-div svelte-1cvtray"><label for="input-returnColor">Colore ritorni</label>
-            <div class="color-input svelte-1cvtray"><input type="color" name="returnColor" id="input-returnColor" class="svelte-1cvtray" value="#ff9d9d">
-                <div class="color-input svelte-1cvtray"><input type="checkbox" name="returnColorTransparent" id="input-returnColorTransparent" class="svelte-1cvtray">
+        <div class="bsp-input settings svelte-19wa3wn"><button class="settings-btn svelte-1ri3iea">⚙ Impostazioni</button>
+<div class="settings-form svelte-1ri3iea"><div class="settings-form form-hide svelte-1ri3iea"><div class="setting-input-div svelte-1ri3iea"><label for="input-columns">Numero di colonne</label>
+            <input type="number" name="columns" id="input-columns" min="7" max="15" step="1" class="svelte-1ri3iea" value="13"></div>
+        <div class="setting-input-div svelte-1ri3iea"><label for="input-returnSpacing">Spazio sui ritorni</label>
+            <input type="checkbox" name="returnSpacing" id="input-returnSpacing" class="svelte-1ri3iea" checked></div>
+        <div class="setting-input-div svelte-1ri3iea"><label for="input-bicolorRows">Colori righe alternati</label>
+            <input type="checkbox" name="bicolorRows" id="input-bicolorRows" class="svelte-1ri3iea" checked></div>
+        <div class="setting-input-div svelte-1ri3iea"><label for="input-returnColor">Colore ritorni</label>
+            <div class="color-input svelte-1ri3iea"><input type="color" name="returnColor" id="input-returnColor" class="svelte-1ri3iea" value="#ff9d9d">
+                <div class="color-input svelte-1ri3iea"><input type="checkbox" name="returnColorTransparent" id="input-returnColorTransparent" class="svelte-1ri3iea">
                     <label for="input-returnColorTransparent">Trasparente</label></div></div></div>
-        <div class="setting-input-div svelte-1cvtray"><label for="input-pauseColor">Colore pause</label>
-            <div class="color-input svelte-1cvtray"><input type="color" name="pauseColor" id="input-pauseColor" class="svelte-1cvtray" value="#b5ffb5">
-                <div class="color-input svelte-1cvtray"><input type="checkbox" name="pauseColorTransparent" id="input-pauseColorTransparent" class="svelte-1cvtray">
+        <div class="setting-input-div svelte-1ri3iea"><label for="input-pauseColor">Colore pause</label>
+            <div class="color-input svelte-1ri3iea"><input type="color" name="pauseColor" id="input-pauseColor" class="svelte-1ri3iea" value="#b5ffb5">
+                <div class="color-input svelte-1ri3iea"><input type="checkbox" name="pauseColorTransparent" id="input-pauseColorTransparent" class="svelte-1ri3iea">
                     <label for="input-pauseColorTransparent">Trasparente</label></div></div></div>
-        <button class="settings-btn svelte-1cvtray">⟲ Ripristina</button></div>
+        <div class="setting-input-div svelte-1ri3iea"><label for="input-colorReturningBells">Colora campane ritorno</label>
+            <input type="checkbox" name="colorReturningBells" id="input-colorReturningBells" class="svelte-1ri3iea"></div>
+        <button class="settings-btn svelte-1ri3iea">⟲ Ripristina</button></div>
 </div></div></div>
     
 </div>
 
 
-		<script type="module" data-sveltekit-hydrate="1fyuhfn">
-			import { start } from "/bells-sheets-pager/internal/immutable/start-4c39597e.js";
+		<script type="module" data-sveltekit-hydrate="vrt1rj">
+			import { start } from "/bells-sheets-pager/internal/immutable/start-094f82df.js";
 
 			start({
 				env: {},
 				paths: {"assets":"/bells-sheets-pager","base":"/bells-sheets-pager"},
-				target: document.querySelector('[data-sveltekit-hydrate="1fyuhfn"]').parentNode,
-				version: "1675789097927",
+				target: document.querySelector('[data-sveltekit-hydrate="vrt1rj"]').parentNode,
+				version: "1675856050540",
 				hydrate: {
 					node_ids: [0, 2],
 					data: [null,null],
