--- a/src/app.html
+++ b/src/app.html
@@ -1,25 +1,29 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <title>Impaginatore Spartiti</title>
-        <meta charset="utf-8" />
-        <link rel="icon" href="%sveltekit.assets%/favicon.png" />
-        <meta name="viewport" content="width=device-width" />
-        <style>
-            :root {
-                --bg-color: #353535;
-                --primary-color: #b8a61a;
-                --shadow-color: #e2cb1d44;
-                --shadow-color-hover: #e2cb1d88;
-                --text-color: #f0f0f0;
-                --font: "Roboto";
-                color: var(--text-color);
-                font-family: var(--font);
-            }
-        </style>
-        %sveltekit.head%
-    </head>
-    <body data-sveltekit-preload-data="hover" style="margin: 0">
-        <div style="display: contents">%sveltekit.body%</div>
-    </body>
+
+<head>
+    <title>Impaginatore Spartiti</title>
+    <meta charset="utf-8" />
+    <link rel="icon" href="%sveltekit.assets%/favicon.png" />
+    <meta name="viewport" content="width=device-width" />
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto">
+    <style>
+        :root {
+            --bg-color: #353535;
+            --primary-color: #b8a61a;
+            --shadow-color: #e2cb1d44;
+            --shadow-color-hover: #e2cb1d88;
+            --text-color: #f0f0f0;
+            --font: "Roboto";
+            color: var(--text-color);
+            font-family: var(--font);
+        }
+    </style>
+    %sveltekit.head%
+</head>
+
+<body data-sveltekit-preload-data="hover" style="margin: 0">
+    <div style="display: contents">%sveltekit.body%</div>
+</body>
+
 </html>
