--- a/index.html
+++ b/index.html
@@ -1,25 +1,27 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <title>Impaginatore Spartiti</title>
-        <meta charset="utf-8" />
-        <link rel="icon" href="/bells-sheets-pager/favicon.png" />
-        <meta name="viewport" content="width=device-width" />
-        <style>
-            :root {
-                --bg-color: #353535;
-                --primary-color: #b8a61a;
-                --shadow-color: #e2cb1d44;
-                --shadow-color-hover: #e2cb1d88;
-                --text-color: #f0f0f0;
-                --font: "Roboto";
-                color: var(--text-color);
-                font-family: var(--font);
-            }
-        </style>
-        <meta http-equiv="content-security-policy" content="">
+
+<head>
+    <title>Impaginatore Spartiti</title>
+    <meta charset="utf-8" />
+    <link rel="icon" href="/bells-sheets-pager/favicon.png" />
+    <meta name="viewport" content="width=device-width" />
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto">
+    <style>
+        :root {
+            --bg-color: #353535;
+            --primary-color: #b8a61a;
+            --shadow-color: #e2cb1d44;
+            --shadow-color-hover: #e2cb1d88;
+            --text-color: #f0f0f0;
+            --font: "Roboto";
+            color: var(--text-color);
+            font-family: var(--font);
+        }
+    </style>
+    <meta http-equiv="content-security-policy" content="">
 		<link href="/bells-sheets-pager/internal/immutable/assets/_page-a048fa8f.css" rel="stylesheet">
-		<link rel="modulepreload" href="/bells-sheets-pager/internal/immutable/start-094f82df.js">
+		<link rel="modulepreload" href="/bells-sheets-pager/internal/immutable/start-6c18d8b4.js">
 		<link rel="modulepreload" href="/bells-sheets-pager/internal/immutable/chunks/index-8e73d0ff.js">
 		<link rel="modulepreload" href="/bells-sheets-pager/internal/immutable/chunks/singletons-fe47261d.js">
 		<link rel="modulepreload" href="/bells-sheets-pager/internal/immutable/chunks/shared-23917130.js">
@@ -27,11 +29,12 @@
 		<link rel="modulepreload" href="/bells-sheets-pager/internal/immutable/components/layout.svelte-b54127ab.js">
 		<link rel="modulepreload" href="/bells-sheets-pager/internal/immutable/modules/pages/_layout.ts-9cbb603b.js">
 		<link rel="modulepreload" href="/bells-sheets-pager/internal/immutable/chunks/_layout-da46b06b.js">
-		<link rel="modulepreload" href="/bells-sheets-pager/internal/immutable/components/pages/_page.svelte-d558f517.js">
-		<link rel="modulepreload" href="/bells-sheets-pager/internal/immutable/chunks/_page-fe3bd7d2.js">
-    </head>
-    <body data-sveltekit-preload-data="hover" style="margin: 0">
-        <div style="display: contents">
+		<link rel="modulepreload" href="/bells-sheets-pager/internal/immutable/components/pages/_page.svelte-4caa5be8.js">
+		<link rel="modulepreload" href="/bells-sheets-pager/internal/immutable/chunks/_page-5ad95027.js">
+</head>
+
+<body data-sveltekit-preload-data="hover" style="margin: 0">
+    <div style="display: contents">
 
 
 <div class="background svelte-19wa3wn"><h1 class="title svelte-19wa3wn">Impaginatore Spartiti Campane a Sistema Veronese</h1>
@@ -65,13 +68,13 @@
 
 
 		<script type="module" data-sveltekit-hydrate="vrt1rj">
-			import { start } from "/bells-sheets-pager/internal/immutable/start-094f82df.js";
+			import { start } from "/bells-sheets-pager/internal/immutable/start-6c18d8b4.js";
 
 			start({
 				env: {},
 				paths: {"assets":"/bells-sheets-pager","base":"/bells-sheets-pager"},
 				target: document.querySelector('[data-sveltekit-hydrate="vrt1rj"]').parentNode,
-				version: "1675856050540",
+				version: "1675895910750",
 				hydrate: {
 					node_ids: [0, 2],
 					data: [null,null],
@@ -81,5 +84,6 @@
 			});
 		</script>
 	</div>
-    </body>
+</body>
+
 </html>
