--- a/index.html
+++ b/index.html
@@ -21,16 +21,16 @@
     </style>
     <meta http-equiv="content-security-policy" content="">
 		<link href="/bells-sheets-pager/internal/immutable/assets/_page-e8443103.css" rel="stylesheet">
-		<link rel="modulepreload" href="/bells-sheets-pager/internal/immutable/start-92942e66.js">
+		<link rel="modulepreload" href="/bells-sheets-pager/internal/immutable/start-227b10a0.js">
 		<link rel="modulepreload" href="/bells-sheets-pager/internal/immutable/chunks/index-773df3fe.js">
-		<link rel="modulepreload" href="/bells-sheets-pager/internal/immutable/chunks/singletons-8978acb3.js">
-		<link rel="modulepreload" href="/bells-sheets-pager/internal/immutable/chunks/shared-23917130.js">
+		<link rel="modulepreload" href="/bells-sheets-pager/internal/immutable/chunks/singletons-c0e13c9f.js">
+		<link rel="modulepreload" href="/bells-sheets-pager/internal/immutable/chunks/shared-517e7532.js">
 		<link rel="modulepreload" href="/bells-sheets-pager/internal/immutable/chunks/preload-helper-41c905a7.js">
 		<link rel="modulepreload" href="/bells-sheets-pager/internal/immutable/components/layout.svelte-99a6b9f0.js">
 		<link rel="modulepreload" href="/bells-sheets-pager/internal/immutable/modules/pages/_layout.ts-9cbb603b.js">
 		<link rel="modulepreload" href="/bells-sheets-pager/internal/immutable/chunks/_layout-da46b06b.js">
-		<link rel="modulepreload" href="/bells-sheets-pager/internal/immutable/components/pages/_page.svelte-a82e1167.js">
-		<link rel="modulepreload" href="/bells-sheets-pager/internal/immutable/chunks/_page-dfbe2a32.js">
+		<link rel="modulepreload" href="/bells-sheets-pager/internal/immutable/components/pages/_page.svelte-53b9e49c.js">
+		<link rel="modulepreload" href="/bells-sheets-pager/internal/immutable/chunks/_page-5b71d83f.js">
 </head>
 
 <body data-sveltekit-preload-data="hover" style="margin: 0">
@@ -63,20 +63,22 @@
                     <label for="input-pauseColorTransparent">Trasparente</label></div></div></div>
         <div class="setting-input-div svelte-1ri3iea"><label for="input-colorReturningBells">Colora campane ritorno</label>
             <input type="checkbox" name="colorReturningBells" id="input-colorReturningBells" class="svelte-1ri3iea"></div>
+        <div class="setting-input-div svelte-1ri3iea"><label for="input-boldChords">Accordi in grassetto</label>
+            <input type="checkbox" name="boldChords" id="input-boldChords" class="svelte-1ri3iea"></div>
         <button class="settings-btn svelte-1ri3iea">⟲ Ripristina</button></div>
 </div></div></div>
     
 </div>
 
 
-		<script type="module" data-sveltekit-hydrate="18qj6ss">
-			import { start } from "/bells-sheets-pager/internal/immutable/start-92942e66.js";
+		<script type="module" data-sveltekit-hydrate="1jekbsl">
+			import { start } from "/bells-sheets-pager/internal/immutable/start-227b10a0.js";
 
 			start({
 				env: {},
 				paths: {"assets":"/bells-sheets-pager","base":"/bells-sheets-pager"},
-				target: document.querySelector('[data-sveltekit-hydrate="18qj6ss"]').parentNode,
-				version: "1676384684521",
+				target: document.querySelector('[data-sveltekit-hydrate="1jekbsl"]').parentNode,
+				version: "1676900915702",
 				hydrate: {
 					node_ids: [0, 2],
 					data: [null,null],
