--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     </style>
     <meta http-equiv="content-security-policy" content="">
 		<link href="/bells-sheets-pager/internal/immutable/assets/_page-e8443103.css" rel="stylesheet">
-		<link rel="modulepreload" href="/bells-sheets-pager/internal/immutable/start-227b10a0.js">
+		<link rel="modulepreload" href="/bells-sheets-pager/internal/immutable/start-8609f00d.js">
 		<link rel="modulepreload" href="/bells-sheets-pager/internal/immutable/chunks/index-773df3fe.js">
 		<link rel="modulepreload" href="/bells-sheets-pager/internal/immutable/chunks/singletons-c0e13c9f.js">
 		<link rel="modulepreload" href="/bells-sheets-pager/internal/immutable/chunks/shared-517e7532.js">
@@ -29,8 +29,8 @@
 		<link rel="modulepreload" href="/bells-sheets-pager/internal/immutable/components/layout.svelte-99a6b9f0.js">
 		<link rel="modulepreload" href="/bells-sheets-pager/internal/immutable/modules/pages/_layout.ts-9cbb603b.js">
 		<link rel="modulepreload" href="/bells-sheets-pager/internal/immutable/chunks/_layout-da46b06b.js">
-		<link rel="modulepreload" href="/bells-sheets-pager/internal/immutable/components/pages/_page.svelte-53b9e49c.js">
-		<link rel="modulepreload" href="/bells-sheets-pager/internal/immutable/chunks/_page-5b71d83f.js">
+		<link rel="modulepreload" href="/bells-sheets-pager/internal/immutable/components/pages/_page.svelte-86cf9720.js">
+		<link rel="modulepreload" href="/bells-sheets-pager/internal/immutable/chunks/_page-e5f2faad.js">
 </head>
 
 <body data-sveltekit-preload-data="hover" style="margin: 0">
@@ -49,6 +49,8 @@
         <div class="bsp-input settings svelte-juv5ar"><button class="settings-btn svelte-1ri3iea">⚙ Impostazioni</button>
 <div class="settings-form svelte-1ri3iea"><div class="settings-form form-hide svelte-1ri3iea"><div class="setting-input-div svelte-1ri3iea"><label for="input-columns">Numero di colonne</label>
             <input type="number" name="columns" id="input-columns" min="7" max="15" step="1" class="svelte-1ri3iea" value="13"></div>
+        <div class="setting-input-div svelte-1ri3iea"><label for="input-fontSize">Dimensione carattere (pt)</label>
+            <input type="number" name="fontSize" id="input-fontSize" min="7" max="20" step="1" class="svelte-1ri3iea" value="14"></div>
         <div class="setting-input-div svelte-1ri3iea"><label for="input-returnSpacing">Spazio sui ritorni</label>
             <input type="checkbox" name="returnSpacing" id="input-returnSpacing" class="svelte-1ri3iea" checked></div>
         <div class="setting-input-div svelte-1ri3iea"><label for="input-bicolorRows">Colori righe alternati</label>
@@ -71,14 +73,14 @@
 </div>
 
 
-		<script type="module" data-sveltekit-hydrate="1jekbsl">
-			import { start } from "/bells-sheets-pager/internal/immutable/start-227b10a0.js";
+		<script type="module" data-sveltekit-hydrate="hzlk7n">
+			import { start } from "/bells-sheets-pager/internal/immutable/start-8609f00d.js";
 
 			start({
 				env: {},
 				paths: {"assets":"/bells-sheets-pager","base":"/bells-sheets-pager"},
-				target: document.querySelector('[data-sveltekit-hydrate="1jekbsl"]').parentNode,
-				version: "1676900915702",
+				target: document.querySelector('[data-sveltekit-hydrate="hzlk7n"]').parentNode,
+				version: "1678877848373",
 				hydrate: {
 					node_ids: [0, 2],
 					data: [null,null],
