--- a/index.html
+++ b/index.html
@@ -21,17 +21,17 @@
     </style>
     <meta http-equiv="content-security-policy" content="">
 		<link href="./bells-sheets-pager/internal/immutable/assets/_page.e8443103.css" rel="stylesheet">
-		<link rel="modulepreload" href="./bells-sheets-pager/internal/immutable/entry/start.b23b29fe.js">
+		<link rel="modulepreload" href="./bells-sheets-pager/internal/immutable/entry/start.6df6ac21.js">
 		<link rel="modulepreload" href="./bells-sheets-pager/internal/immutable/chunks/index.7ea565e8.js">
-		<link rel="modulepreload" href="./bells-sheets-pager/internal/immutable/chunks/singletons.04b0f069.js">
-		<link rel="modulepreload" href="./bells-sheets-pager/internal/immutable/chunks/paths.03877d10.js">
-		<link rel="modulepreload" href="./bells-sheets-pager/internal/immutable/entry/app.a48bf892.js">
+		<link rel="modulepreload" href="./bells-sheets-pager/internal/immutable/chunks/singletons.c80bdb3b.js">
+		<link rel="modulepreload" href="./bells-sheets-pager/internal/immutable/chunks/paths.4187eabe.js">
+		<link rel="modulepreload" href="./bells-sheets-pager/internal/immutable/entry/app.8e159495.js">
 		<link rel="modulepreload" href="./bells-sheets-pager/internal/immutable/chunks/preload-helper.41c905a7.js">
 		<link rel="modulepreload" href="./bells-sheets-pager/internal/immutable/entry/layout.svelte.d6bbbc19.js">
 		<link rel="modulepreload" href="./bells-sheets-pager/internal/immutable/entry/_layout.ts.984db11e.js">
 		<link rel="modulepreload" href="./bells-sheets-pager/internal/immutable/chunks/_layout.da46b06b.js">
-		<link rel="modulepreload" href="./bells-sheets-pager/internal/immutable/entry/_page.svelte.f16a547c.js">
-		<link rel="modulepreload" href="./bells-sheets-pager/internal/immutable/chunks/_page.16754014.js">
+		<link rel="modulepreload" href="./bells-sheets-pager/internal/immutable/entry/_page.svelte.45914c43.js">
+		<link rel="modulepreload" href="./bells-sheets-pager/internal/immutable/chunks/_page.63622da4.js">
 </head>
 
 <body data-sveltekit-preload-data="hover" style="margin: 0">
@@ -77,7 +77,7 @@
 			
 			<script>
 				{
-					__sveltekit_1yxxk5x = {
+					__sveltekit_1sqg9ax = {
 						env: {},
 						assets: "/bells-sheets-pager",
 						base: new URL("./bells-sheets-pager", location).pathname,
@@ -87,10 +87,10 @@
 					const data = [null,null];
 
 					Promise.all([
-						import("./bells-sheets-pager/internal/immutable/entry/start.b23b29fe.js"),
-						import("./bells-sheets-pager/internal/immutable/entry/app.a48bf892.js")
+						import("./bells-sheets-pager/internal/immutable/entry/start.6df6ac21.js"),
+						import("./bells-sheets-pager/internal/immutable/entry/app.8e159495.js")
 					]).then(([kit, app]) => {
-						kit.start(app, __sveltekit_1yxxk5x.element, {
+						kit.start(app, __sveltekit_1sqg9ax.element, {
 							node_ids: [0, 2],
 							data,
 							form: null,
