--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <title>Impaginatore Spartiti</title>
     <meta charset="utf-8" />
-    <link rel="icon" href="./bells-sheets-pager/favicon.png" />
+    <link rel="icon" href="./favicon.png" />
     <meta name="viewport" content="width=device-width" />
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto">
     <style>
@@ -20,18 +20,18 @@
         }
     </style>
     <meta http-equiv="content-security-policy" content="">
-		<link href="./bells-sheets-pager/internal/immutable/assets/_page.e8443103.css" rel="stylesheet">
-		<link rel="modulepreload" href="./bells-sheets-pager/internal/immutable/entry/start.6df6ac21.js">
-		<link rel="modulepreload" href="./bells-sheets-pager/internal/immutable/chunks/index.7ea565e8.js">
-		<link rel="modulepreload" href="./bells-sheets-pager/internal/immutable/chunks/singletons.c80bdb3b.js">
-		<link rel="modulepreload" href="./bells-sheets-pager/internal/immutable/chunks/paths.4187eabe.js">
-		<link rel="modulepreload" href="./bells-sheets-pager/internal/immutable/entry/app.8e159495.js">
-		<link rel="modulepreload" href="./bells-sheets-pager/internal/immutable/chunks/preload-helper.41c905a7.js">
-		<link rel="modulepreload" href="./bells-sheets-pager/internal/immutable/entry/layout.svelte.d6bbbc19.js">
-		<link rel="modulepreload" href="./bells-sheets-pager/internal/immutable/entry/_layout.ts.984db11e.js">
-		<link rel="modulepreload" href="./bells-sheets-pager/internal/immutable/chunks/_layout.da46b06b.js">
-		<link rel="modulepreload" href="./bells-sheets-pager/internal/immutable/entry/_page.svelte.45914c43.js">
-		<link rel="modulepreload" href="./bells-sheets-pager/internal/immutable/chunks/_page.63622da4.js">
+		<link href="./internal/immutable/assets/_page.e8443103.css" rel="stylesheet">
+		<link rel="modulepreload" href="./internal/immutable/entry/start.1b4bfa7f.js">
+		<link rel="modulepreload" href="./internal/immutable/chunks/index.7ea565e8.js">
+		<link rel="modulepreload" href="./internal/immutable/chunks/singletons.b738576b.js">
+		<link rel="modulepreload" href="./internal/immutable/chunks/paths.7379920f.js">
+		<link rel="modulepreload" href="./internal/immutable/entry/app.0bd1804c.js">
+		<link rel="modulepreload" href="./internal/immutable/chunks/preload-helper.41c905a7.js">
+		<link rel="modulepreload" href="./internal/immutable/entry/layout.svelte.d6bbbc19.js">
+		<link rel="modulepreload" href="./internal/immutable/entry/_layout.ts.984db11e.js">
+		<link rel="modulepreload" href="./internal/immutable/chunks/_layout.da46b06b.js">
+		<link rel="modulepreload" href="./internal/immutable/entry/_page.svelte.f5906962.js">
+		<link rel="modulepreload" href="./internal/immutable/chunks/_page.94edc29a.js">
 </head>
 
 <body data-sveltekit-preload-data="hover" style="margin: 0">
@@ -77,20 +77,19 @@
 			
 			<script>
 				{
-					__sveltekit_1sqg9ax = {
+					__sveltekit_5ku0t7 = {
 						env: {},
-						assets: "/bells-sheets-pager",
-						base: new URL("./bells-sheets-pager", location).pathname,
+						base: new URL(".", location).pathname.slice(0, -1),
 						element: document.currentScript.parentElement
 					};
 
 					const data = [null,null];
 
 					Promise.all([
-						import("./bells-sheets-pager/internal/immutable/entry/start.6df6ac21.js"),
-						import("./bells-sheets-pager/internal/immutable/entry/app.8e159495.js")
+						import("./internal/immutable/entry/start.1b4bfa7f.js"),
+						import("./internal/immutable/entry/app.0bd1804c.js")
 					]).then(([kit, app]) => {
-						kit.start(app, __sveltekit_1sqg9ax.element, {
+						kit.start(app, __sveltekit_5ku0t7.element, {
 							node_ids: [0, 2],
 							data,
 							form: null,
